--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
-name = "Fast_xml_wikipedia_parser"
+name = "wiki-xml"
 version = "0.1.0"
 edition = "2021"
+
+[profile.dev]
+opt-level = 3
+debug = 0
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-regex = "1"
-serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
+quick-xml = "0.26.0"
 once_cell = "1.16.0"
-threadpool = "1.0"
+regex = "1.7.0"
