--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ debug = 0
 quick-xml = "0.26.0"
 once_cell = "1.16.0"
 regex = "1.7.0"
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
