--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ debug = 0
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+load_file = "1.0.1"
 quick-xml = "0.26.0"
 once_cell = "1.16.0"
 regex = "1.7.0"
