--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,4 @@ once_cell = "1.16.0"
 regex = "1.7.0"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+rustc-hash = "1.1.0"
